# MemexFlow

./: .env.example  .gitignore  AGENTS.md  KnowledgeClaw.md  MemexFlow-2026Q2-Strategy.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.trellis/: .template-hashes.json
docs/: auth-setup-quickstart.md  auth-setup.md  powersync-setup.md
docs/troubleshooting/: README.md  powersync-aud-claim-error.md  powersync-offline-migration.md  powersync-provider-context.md  powersync-sync-rules.md  powersync-worker-404.md  supabase-migrations.md  tailwind-v4-migration.md  tauri-deep-link.md  vite-build-errors.md
powersync/: sync-config.yaml
public/: WASQLiteDB.worker.js
scripts/: check-schema.mjs  seed-demo.mjs  seed-demo.sh  test-e2e.mjs  test-offline.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/hooks/: usePowerSyncQueries.ts
src/i18n/: config.ts
src/lib/: AuthProvider.tsx  PowerSyncProvider.tsx  captures.test.ts  captures.ts  database.types.ts  date.ts  deep-link.ts  models.ts  powersync.ts  supabase.ts
supabase/: README.md  config.toml  schema.sql  seed.sql
supabase/migrations/: 20260416200000_initial_schema.sql  (+10 more)
worker/: .env.example  pyproject.toml
worker/src/worker/: __init__.py  main.py
worker/src/worker/channels/: base.py  github_releases.py  rss.py
worker/src/worker/jobs/: handlers.py
worker/src/worker/utils/: llm.py  logging.py  supabase.py
(+69 files in other folders)
